i-MSCP ChangeLog
~~~~~~~~~~~~~~~~
-------------------------------------------------------------------------------------
i-MSCP 1.1.1.0 (beta 1)
-------------------------------------------------------------------------------------

Features / Enhancements:

GUI:
	Tools:
		- Updated PhpMyAdmin to version 3.5.0


Tickets:
	- Fixed #163: Enhancement - Add Support for Roundcube Mail (or switch from Squirrel)
	- Fixed #368: Enhancement - Add custom TXT DNS resource records
	- Fixed #387: Enhancement - php.ini modifications to allow the usage of roundcube
	- Fixed #402: Task - Ajaxplorer - Integrate fix from ajaxplorer forum
	- Fixed #403: Defect - Hosting Plan Secure Code doesn't work
	- Fixed #404: Defect - Missing translations
	- Fixed #405: Bug - Custom message for maintenance mode is always overridden
	- Fixed #408: Defect: warning: master.cf: unused parameter: smtpd_override_options=no_address_mappings
	- Fixed #421: Defect: Adding email account not IDN compatible
	- Fixed #423: Malfunction: Ticket-Summary at Reseller-Overview